#pragma once
#include <string>
#include <iostream>

struct Punto {
    // Una ubicación en la grilla definida
    // por coordenadas X(horizontal) Y(vertical)
    int x;
    int y;
};